--- a/views/secretaria/secretariaReasignarTurno.pug
+++ b/views/secretaria/secretariaReasignarTurno.pug
@@ -91,7 +91,7 @@ html(lang="es")
                 select(name="hora" id="horario" required class="horarioSelect" disabled)
                     option(value="" selected disabled class="horarioOption") Selecciona un horario
                 
-                button(type="submit" class="btnTrasladar") ✅ Reasignar Turno
+                button(type="submit" class="btnTrasladar")  Reasignar Turno
             
             a(href="/turnos/listarTurnos" class="volver") ← Volver a turnos
         include ../includes/footer
