--- a/views/admin/adminRegisterSecretaria.pug
+++ b/views/admin/adminRegisterSecretaria.pug
@@ -12,12 +12,12 @@ html
         if msg == 'ok'
             div.alert.alert-success
                 span.icon ✓
-                |  Datos editados exitosamente
+                |  Secretaria registrada exitosamente
 
         if msg == 'error'
             div.alert.alert-error
                 span.icon ⚠
-                |  Hubo un error al editar tus datos
+                |  Hubo un error al registrar la secretaria. Inténtalo de nuevo.
         main(class="mainRegistro")
             section(class="sectionRegistro")
                 article(class="articleRegistro")
