--- a/views/secretaria/secretariaGestionTurno.pug
+++ b/views/secretaria/secretariaGestionTurno.pug
@@ -5,11 +5,21 @@ html
     link(href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap", rel="stylesheet")
     link(rel="stylesheet" href="/css/secretariaGestionTurno.css")
     link(rel="stylesheet" href="/css/footerNuevo.css")
+    link(rel="stylesheet" href="/css/alerta.css")
     link(rel="stylesheet" href="/css/headerSecretaria.css")
     link(rel="stylesheet" href="/css/autocompletar_estilos.css")
     link(rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css")
   body
     include ../includes/headerSecretaria
+    if msg == 'ok'
+      div.alert.alert-success
+        span.icon ✓
+        |  Turno creado exitosamente
+
+    if msg == 'error'
+      div.alert.alert-error
+        span.icon ⚠
+        |  Hubo un error al crear el turno. Por favor, intenta nuevamente.
     main(class="mainSecreGestionTurno")
       h2 Crear Turno
       form(action="/turnos/crear" method="POST" class="formTurnos" enctype="multipart/form-data") 
@@ -36,6 +46,7 @@ html
     include ../includes/footer
     script(src="/js/logout.js")
     script(src="/js/horarios.js")
+    script(src="/js/alerta.js")
     script(src="/js/autocompletar_paciente.js")
     script(src="/js/autocompletar_profesional.js")
     script(src="https://cdn.jsdelivr.net/npm/flatpickr")
