--- a/public/css/secretariaTrasladarTurno.css
+++ b/public/css/secretariaTrasladarTurno.css
@@ -6,7 +6,7 @@ body.secretariaTrasladarTurno {
 }
 
 .mainContent {
-    max-width: 500px;
+    width: 40vw;
     margin: 40px auto 20px auto;
     background: #fff;
     border-radius: 12px;
