--- a/views/paciente/pacienteTurno.pug
+++ b/views/paciente/pacienteTurno.pug
@@ -53,6 +53,8 @@ html
         button(type="submit") Crear Turno
     include ../includes/footer
     script(src="/js/logout.js")
+    script.
+      window._esPaciente = true
     script(src="/js/horarios.js")
     script(src="https://cdn.jsdelivr.net/npm/flatpickr")
     script(src="/js/alerta.js")
